fixed invisible tap in progress

--- a/app/assets/stylesheets/progress.css.scss
+++ b/app/assets/stylesheets/progress.css.scss
@@ -16,6 +16,13 @@
 	}
 }
 
+#controls {
+	@media screen and (max-width: $desktopwidth) {
+		height: 1px;
+	}
+}
+
+
 .leaflet-container {
 	background: $grayLight;
 }
